feat: Bulletin Delete
