# docs/swagger.json
@@ -35,7 +35,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Bulletin"
+                                "$ref": "#/definitions/dto.BulletinOut"
                             }
                         }
                     }
@@ -72,7 +72,44 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Bulletin"
+                                "$ref": "#/definitions/dto.BulletinOut"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/Bulletin/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "删除公告，需要管理员权限。",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "BulletinDelete",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "DeleteBulletin.ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.BulletinOut"
                             }
                         }
                     }
@@ -147,6 +184,20 @@
                 }
             }
         },
+        "dto.BulletinOut": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "imageUrl": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UserLoginIn": {
             "type": "object",
             "required": [
@@ -178,17 +229,6 @@
                     }
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Bulletin": {
-            "type": "object",
-            "properties": {
-                "imageUrl": {
-                    "type": "string"
-                },
-                "title": {
                     "type": "string"
                 }
             }
