# model/bulletin.go
@@ -19,3 +19,10 @@ func ReadAllBulletin() *[]Bulletin {
 	DB.Find(&bulletins)
 	return &bulletins
 }
+
+// ReadBulletinById 用ID获取用户
+func ReadBulletinById(id int) (*Bulletin, error) {
+	var bulletin Bulletin
+	result := DB.First(&bulletin, id)
+	return &bulletin, result.Error
+}
